<resources>
    <string name="app_name">E-Modul Surat</string>
    <string name="judul_app">BERKORESPONDENSI DENGAN BAIK MELALUI SURAT PRIBADI</string>

    <string name="modul000">\u0020 \u0020 </string>
    <string name="modul111">\u0020 \u0020 Kita selalu berkomunikasi dengan orang lain. Komunikasi baik dengan keluarga, kerabat, sahabat, saudara, tetangga dan kawan sejawat yang perlu terus- menerus dibina. Misalnya dengan memberi kabar, mengabarkan berita, saling mengucapkan terima kasih, saling memberi maaf, menyatakan belasungkawa, mengundang atau memperkenalkan diri. Hal-hal tersebut dapat dilakukan melalui media tulis, yaitu surat. Surat untuk keperluan pribadi disebut surat pribadi.</string>
    <string name="modul112">\u0020 \u0020 Surat pribadi adalah salah satu jenis tulisan yang berisi keperluan antara satu orang dengan orang lain yang bersifat pribadi. Surat pribadi dibuat oleh seseorang yang isinya terkait dengan kepentingan pribadi. Surat pribadi biasanya digunakan untuk berkomunikasi dengan sesama keluarga, anak dengan orang tuanya, sahabat, saudara, siswa dengan guru. Surat pribadi dapat diberikan langsung jika keberadaan penerima surat tidak jauh dengan kita. Tetapi jika penerima surat berada jauh dari kita, maka surat dapat disampaikan dengan cara dikirim melalui pos.</string>
    <string name="modul113">\u0020 \u0020 Surat merupakan salah satu sarana kita dalam berkomunikasi secara tertulis. Menurut Suparno (2007:6.22) surat merupakan sarana komunikasi tertulis untuk menyampaikan suatu pesan dari satu pihak (perorangan, kelompok, atau organisasi) kepada pihak lain. Melalui surat, kita dapat saling berkomunikasi, berbagi rasa, bertukar informasi, dan lain sebagainya. Surat pribadi adalah jenis surat yang bersifat pribadi atau individu dan tidak terikat cara penulisan tertentu. Dalam surat pribadi terbagi menjadi beranekaragam seperti, (1) surat kekeluargaan, (2) surat setengah resmi. Dalam modul ini ada beberapa hal yang perlu diperhatikan ketika menulis surat pribadi.</string>
    <string name="modul114">\u0020 \u0020 Surat pribadi Menurut Semi, (2008:87) menyatakan bahwa “Surat pribadi ialah surat-surat yang isinya menyangkut masalah pribadi yang dikirimkan antara orang yang mempunyai hubungan pribadi seperti anggota keluarga, tetangga, orang sekampung, teman sepermainan, kawan satu kelas atau satu sekolah, rekan satu organisasi, dan hubungan cinta antara, seorang pria dengan wanita”. Warsidi dan Farika (2009:34) menyatakan bahwa banyak hal yang harus diperhatikan dalam menulis surat pribadi.</string>
    <string name="modul115">\u0020 \u0020 Ketika menulis surat pribadi, pasti ada alasan mengapa kita menulis surat pribadi? Apa tujuannya kita membuat surat tersebut?. \n \u0020 \u0020 Surat pribadi memiliki beberapa tujuan diantaranya:</string>

    <string name="modul121">\u0020 \u0020 Seperti yang Ananda ketahui, surat pribadi adalah jenis tulisan yang berisi keperluan pribadi antara satu orang dengan orang lain. Surat pribadi memiliki beberapa fungsi sebagai berikut:</string>
    <string name="modul122">\u0020 \u0020 Terdapat beberapa fungsi surat pribadi sebagai berikut:</string>
    <string name="modul123">\u0020 \u0020 Berdasarkan penjelasan di atas dapat disimpulkan bahwa pada dasarnya fungsi surat adalah sebagai alat komunikasi antara dua pihak, seperti antara lembaga, instansi sebagai pedoman dalam bertindak untuk kemajuan institusi tersebut. Surat dijadikan sebagai alat penyampai informasi dari penulisnya kepada pembaca/ penerimanya. Sebagai alat komunikasi surat tidak hanya bersifat satu arah, melainkan juga dua arah dan ke segala arah. Artinya, surat juga dapat dibalas (surat balasan) sebagai timbal balik dan surat juga dapat dibuat/ditujukan kepada lebih dari satu orang (surat edaran, pengumuman, surat pembaca pada surat kabar dan lain- lain).Surat sebagai wakil penulis, dalam hal ini penulis tidak perlu langsung bertatap muka dengan orang yang dituju.</string>
    <string name="modul124">\u0020 \u0020 Pada umumnya di Indonesia, menulis surat pribadi sebenarnya lebih sulit karena perlu memperhatikan hal-hal di luar aturan kebahasaan bahasa Indonesia. Dalam surat pribadi, ada hal yang perlu diperhatikan seperti tata etika atau sopan santun. Khususnya jika kamu menulis surat pribadi untuk orang yang leih dewasa atau orang yang baru saja kamu kenal. Maka dari itu, perhatikan ciri-ciri surat pribadi sebagai berikut:</string>

    <string name="modul131">\u0020 \u0020 Pada era digital seperti saat ini, kegiatan surat-menyurat sudah dapat dilakukan melalui jaringan internet seperti melalui e-mail. Meskipun demikian, penulis dan penerima surat tetap harus menguasai kaidah penulisan surat yang berlaku, baik dalam kaidah penyusunannya, kebahasaan, maupun penyajiannya. Bahkan bagi penerima surat selain menguasai kaidah-kaidah tersebut, ternyata masih dituntut agar terampil berpikir cermat dan kritis terhadap informasi yang tertuang dalam surat yang di baca. Kecermatan dalam membaca surat sangat diperlukan untuk meminimalisir adanya kesalahpahaman dalam menangkap maksud pengirim surat. Sedangkan kekritisan juga sangat diperlukan agar penerima surat tidak mudah tertipu oleh informasi yang disampaikan dalam surat.</string>
    <string name="modul132">\u0020 \u0020 Seperti yang sudah Ananda ketahui bahwa pada kedua teks teks tersebut merupakan contoh dari surat pribadi. Setelah Ananda cermati apakah kedua surat pribadi tersebut merupakan jenis yang sama? Untuk mengenali masing-masing jenis surat priadi tersebut Ananda dapat mengamatinya dari segi isi dan sifatnya. Nah, selanjutnya marilah kita kenali jenis-jenis surat pribadi tersebut secara bertahap. Bagaiama perbedaan isi dan sifatnya dari kedua contoh surat pribadi tersebut? Nah, untuk menemukan perbedaan pada kedua contoh surat tersebut, cobalah cermati setiap bagian surat di atas mulai dari bagian awal hingga bagian akhir! Tulislah temuan Ananda pada tabel berikut seperti contoh yang diberikan!</string>
    <string name="modul133">\u0020 \u0020 Untuk menentukan siapa pengirim surat, Ananda dapat mengamati bagian bawah surat. Pada bagian tersebut terdapat status dan nama pengirim surat. Nah, mudah kan? Sekarang coba Ananda tulis siapa pengirim dan penerima surat pribadi pada kedua teks tersebut pada tabel berikut ini!</string>
    <string name="modul134">\u0020 \u0020 Jenis surat pada teks 1 bersifat kekeluargaan, sedangkan pada teks 2 bersifat setengah resmi. Status pengirim surat pribadi teks 1 dan 2 bersifat perorangan. Status dan penerima surat pada teks 1 adalah keluarga sedangkan pada teks 2 penerima suratnya adalah instansi sekolah. Hubungan pengirim dan penerima surat pada teks 1 adalah cucu dengan kakek neneknya. Sedangkan pada teks 2 wali murid dengan guru kelas di sekolah.</string>
    <string name="modul135">\u0020 \u0020 Surat untuk orang yang lebih tua atau dihormati biasanya ditujukan seperti kepada ayah, ibu, kakek dan nenek. Pada dasarnya unsur yang terdapat dalam surat untuk orang yang lebih tua atau dihormati sama seperti surat pribadi umumnya. Hanya saja yang membedakan terdapat pada kebahasaan dalam surat tersebut. Kebahasaan dalam surat pribadi untuk orang yang lebih tua/ dihormati biasanya lebih santun sebagai berikut:</string>
    <string name="modul136">\u0020 \u0020 Surat untuk teman sebaya biasanya ditujukan seperti kepada teman kita ketika di sekolah, teman di lingkungan rumah dan teman bermain yang seumuran. Pada dasarnya unsur yang terdapat dalam surat untuk teman sebaya sama seperti surat pribadi umumnya. Hanya saja yang membedakan terdapat pada kebahasaan dalam surat tersebut. Kebahasaan dalam surat pribadi untuk teman sebaya biasanya lebih santai. Berikut kebahasaan yang termasuk dalam surat pribadi untuk teman sebaya meliputi:</string>
    <string name="modul137">\u0020 \u0020 Surat untuk adik atau teman yang lebih muda biasanya ditujukan seperti kepada adik, teman kita ketika di sekolah, teman di lingkungan rumah dan teman bermain yang usianya lebih muda dari kita. Pada dasarnya unsur yang terdapat dalam surat untuk adik atau teman yang lebih muda sama seperti surat pribadi umumnya. Hanya saja yang membedakan terdapat pada kebahasaan dalam surat tersebut. Kebahasaan dalam surat pribadi untuk adik atau teman yang lebih muda biasanya lebih santai. Berikut kebahasaan yang termasuk dalam surat pribadi untuk adik atau teman yang lebih muda meliputi:</string>
    <string name="modul138">\u0020 \u0020 Surat untuk kakak biasanya ditujukan untuk kakak kandung kita atau kakak sepupu dan kakak kelas di sekolah. Pada dasarnya unsur yang terdapat dalam surat untuk kakak sama seperti surat pribadi umumnya. Hanya saja yang membedakan terdapat pada kebahasaan dalam surat tersebut. Kebahasaan dalam surat pribadi untuk kakak biasanya santai dan tetap menghormati. Berikut kebahasaan yang termasuk dalam surat pribadi untuk kakak meliputi:</string>
    <string name="modul139">\u0020 \u0020 Surat untuk guru biasanya ditujukan untuk guru di sekolah. Pada dasarnya unsur yang terdapat dalam surat untuk guru sama seperti surat pribadi umumnya. Hanya saja yang membedakan terdapat pada kebahasaan dalam surat tersebut. Kebahasaan dalam surat pribadi untuk guru biasanya lebih santun dan menghargai. Berikut kebahasaan yang termasuk dalam surat pribadi untuk guru meliputi:</string>
    <string name="modul1310">\u0020 \u0020 Surat lamaran kerja merupakan surat pribadi setengah resmi yang dibuat dan diserahkan kepada pihak lain untuk keperluan melamar pekerjaan. Surat lamaran kerja menggunakan bahasa baku yang baik, sopan dan mudah dimengerti.</string>
    <string name="modul1311">\u0020 \u0020 Surat pengunduran diri merupakan surat pribadi setengah resmi yang dibuat dan diserahkan kepada pihak lain untuk keperluan pengunduran diri dari pekerjaan. Surat pengunduran diri menggunakan bahasa baku yang baik, sopan dan mudah dimengerti.</string>
    <string name="modul1312">\u0020 \u0020 Surat permohonan adalah surat yang dibuat dan diserahkan kepada pihak lain, baik itu pribadi maupun instansi/ organisasi, untuk mengajukan permohonan.</string>
    <string name="modul1313">\u0020 \u0020 </string>
    <string name="modul1314">\u0020 \u0020 </string>
    <string name="modul1315">\u0020 \u0020 </string>

    <string name="daftarpustakakhusus">Hough, Lyndal. 2003. <i>Language, Context, and Meaning</i>. Melbourne: Heinemann.</string>
    <string name="profil3">1.	“Pengaruh Penggunaan Media Wall Chart Dalam Meningkatkan Kemampuan Menulis Cerita Pendek Siswa Smp N 2 Majenang Kelas VII A” Artikel, Vol.5, No. 1 (2018) : METAFORA (Jurnal Bahasa dan Sastra UMP).\n 2.	“Keefektifan Metode Jigsaw Terintegrasi Cooperative Review dalam Meningkatkan Hasil Belajar Apresiasi Teks Drama Siswa Kelas VIII SMP N 2 Purwokerto” Skripsi, Universitas Muhammadiyah Purwokerto (2019).\n 3.	<i>“Sociolinguistic Studies: Phenomenon of Diglosia in Postgraduate Students of Indonesian Language and Literature Education Class of 2020 University of Muhammadiyah Purwokerto” Proceedings of The 1st Internasional Seminar on Teacher Training and Education</i>, Purwokerto: 17- 18 July 2021. Hal. 1-5.
</string>
</resources>