<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".konten.modul.Modul11Activity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bgkudua"
        android:scaleType="centerCrop"/>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mengenal Surat Pribadi"
            android:textSize="17dp"
            android:textStyle="bold"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:background="@color/white">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modul111"
            android:justificationMode="inter_word"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/modul111"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:background="@color/white">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modul112"
            android:justificationMode="inter_word"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modul113"
            android:justificationMode="inter_word"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modul114"
            android:justificationMode="inter_word"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:paddingBottom="80dp"
            android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/modul115" />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="\u0020 \u0020 1. "/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Memberikan Undangan"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="\u0020 \u0020 2. "/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mengajukan Sebuah Permohonan atau Meminta Informasi"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="\u0020 \u0020 3. "/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Menjawab atau Membalas Sebuah Undangan"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/tv_modul11_41"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="\u0020 \u0020 4. "/>
                <TextView
                    android:id="@+id/tv_modul11_42"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Merencanakan sesuatu dengan orang lain"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/tv_modul11_51"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="\u0020 \u0020 5. "
                    />
                <TextView
                    android:id="@+id/tv_modul11_52"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Memohon permintaan maaf"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/tv_modul11_61"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="\u0020 \u0020 6. "
                    />
                <TextView
                    android:id="@+id/tv_modul11_62"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Menyampaikan ucapan selamat atas hal baik yang terjadi pada seseorang"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/tv_modul11_71"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="\u0020 \u0020 7. "
                    />
                <TextView
                    android:id="@+id/tv_modul11_72"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:layout_weight="1"
                    android:text="Menyampaikan rasa simpati atas musibah yang sedang dirasakan seseorang" />


            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/tv_modul11_81"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="\u0020 \u0020 8. "
                    />
                <TextView
                    android:id="@+id/tv_modul11_82"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Memberikan ucapan terima kasih"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/tv_modul11_91"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="\u0020 \u0020 9. "
                    />
                <TextView
                    android:id="@+id/tv_modul11_92"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Memberikan kabar kepada orang lain"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" "
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" "
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" "
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" "
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" "
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </TableRow>
        </TableLayout>

    </LinearLayout>
    </LinearLayout>

</ScrollView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/mainku"
        android:layout_alignParentBottom="true"/>
    <ImageButton
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_baseline_home_24_v2"
        android:background="@drawable/btn_image_v2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:scaleType="centerInside"
        android:id="@+id/btn_myhome"/>
</RelativeLayout>